<?xml version="1.0"?>
<package format="2">
  <name>delivery_pkg</name>
  <version>0.0.0</version>
  <description>The delivery package</description>

  <maintainer email="super3714@naver.com">soybeancurd2523</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>   <!--for yaml file read-->
  <!-- <build_depend>read_yaml_pkg</build_depend> -->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend> 
  <!-- <build_export_depend>read_yaml_pkg</build_export_depend> -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend> 
  <!-- <exec_depend>read_yaml_pkg</exec_depend> -->

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
